--- a/PA3/starter.ipynb
+++ b/PA3/starter.ipynb
@@ -114,13 +114,14 @@
     "    p_acc = 0\n",
     "    iou_acc = 0\n",
     "    count = 0\n",
+    "    fcn_model.eval()\n",
     "    for iter, (X, tar, Y) in enumerate(val_loader):\n",
     "        if use_gpu:\n",
     "            X = X.cuda()\n",
     "            tar = tar.cuda()\n",
     "        else:\n",
     "            X,tar = X.cpu(), tar.cpu()\n",
-    "        p, iou = fcn_model.eval(X, tar)\n",
+    "        p, iou = fcn_model.evaluate(X, tar)\n",
     "        p_acc += p\n",
     "        iou_acc += np.mean(np.array(iou))\n",
     "        count += 1\n",
@@ -135,13 +136,14 @@
     "    p_acc = 0\n",
     "    iou_acc = 0\n",
     "    count = 0\n",
+    "    fcn_model.eval()\n",
     "    for iter, (X, tar, Y) in enumerate(test_loader):\n",
     "        if use_gpu:\n",
     "            X = X.cuda()\n",
     "            tar = tar.cuda()\n",
     "        else:\n",
     "            X,tar = X.cpu(), tar.cpu()\n",
-    "        p, iou = fcn_model.eval(X, tar)\n",
+    "        p, iou = fcn_model.evaluate(X, tar)\n",
     "        p_acc += p\n",
     "        iou_acc += np.mean(np.array(iou))\n",
     "        count += 1\n",
@@ -181,6 +183,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
