--- a/PA4/get_datasets.ipynb
+++ b/PA4/get_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-02-21 16:48:29--  http://msvocds.blob.core.windows.net/annotations-1-0-3/captions_train-val2014.zip\n",
+      "Resolving web.ucsd.edu (web.ucsd.edu)... 132.239.1.231, 132.239.1.230\n",
+      "Connecting to web.ucsd.edu (web.ucsd.edu)|132.239.1.231|:3128... connected.\n",
+      "Proxy request sent, awaiting response... 200 OK\n",
+      "Length: 19673183 (19M) [application/octet-stream Charset=UTF-8]\n",
+      "Saving to: ‘./data/captions_train-val2014.zip’\n",
+      "\n",
+      "captions_train-val2 100%[===================>]  18.76M  --.-KB/s    in 0.1s    \n",
+      "\n",
+      "2020-02-21 16:48:29 (145 MB/s) - ‘./data/captions_train-val2014.zip’ saved [19673183/19673183]\n",
+      "\n",
+      "Archive:  ./data/captions_train-val2014.zip\n",
+      "  inflating: ./data/annotations/captions_train2014.json  \n",
+      "  inflating: ./data/annotations/captions_val2014.json  \n"
+     ]
+    }
+   ],
    "source": [
     "#make directory and get annotations for training and testing\n",
     "!mkdir data\n",
@@ -27,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading annotations into memory...\n",
+      "Done (t=0.91s)\n",
+      "creating index...\n",
+      "index created!\n"
+     ]
+    }
+   ],
    "source": [
     "coco = COCO('./data/annotations/captions_train2014.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading annotations into memory...\n",
+      "Done (t=0.58s)\n",
+      "creating index...\n",
+      "index created!\n"
+     ]
+    }
+   ],
    "source": [
     "cocoTest = COCO('./data/annotations/captions_val2014.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "for img_id in testIds:\n",
-    "    path = cocoValTest.loadImgs(img_id)[0]['file_name']\n",
+    "    path = cocoTest.loadImgs(img_id)[0]['file_name']\n",
     "    copyfile('/datasets/COCO-2015/val2014/'+path, './data/images/test/'+path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
