--- a/PA4/plotting.ipynb
+++ b/PA4/plotting.ipynb
@@ -33,9 +33,7 @@
    "source": [
     "#load the validation, training loss and iou accuracy calculated on validation set\n",
     "loss = np.load('./losses.npy')\n",
-    "loss_val = np.load('./losses_val.npy')\n",
-    "pixel_acc = np.load('./p_acc.npy', allow_pickle=True)\n",
-    "iou_acc = np.load('./iou_acc.npy')"
+    "loss_val = np.load('./losses_val.npy')"
    ]
   },
   {
