--- a/project/Untitled.ipynb
+++ b/project/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "plt.figure()\n",
     "plt.plot(reward, label='Reward')\n",
     "plt.plot(reward1, label='Smooth Reward')\n",
-    "plt.xlabel('Episodes')\n",
+    "plt.xlabel('TimeSteps (x1000)')\n",
     "plt.ylabel('Reward')\n",
     "plt.legend()\n",
     "plt.title('Reward vs Episodes')\n",
